--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -34,3 +34,5 @@ tbody>:nth-child(odd){
 tbody>:nth-child(even){
   background-color: #0dcaf0;
 }
+
+@keyframes fade-in{0%{opacity:0}100%{opacity:1}}
